# reddit-clone

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile.postgres  README.md  docker-compose.yml  env.yml  package.json
migrations/2023-06-16-063319_create_users/: up.sql
src/: database.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
tools/: create_postgres_databases.sh  diesel_new_migration.sh  diesel_redo_migrations.sh  diesel_run_migrations.sh
