[package]
name = "reddit-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
bb8 = "0.8.1"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["chrono"] }
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
